# mahonia

./: .gitignore  .python-version  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  tasks.py
.github/: prices.json
.github/workflows/: publish.yaml  review.yaml  test.yaml
examples/: examples.py
examples/manufacturing_tests/: pyproject.toml
examples/manufacturing_tests/src/manufacturing/: __init__.py  types.py
src/binexpr/: __init__.py
src/bix/: __init__.py
src/cate/: __init__.py  d.py  f.py
src/mahonia/: __init__.py  bound.py  containers.py  context.py  extract_vars.py  formatting.py  latex.py  match.py  mypy.py  predicate.py  pretty.py  python_func.py  stats.py  tolerance.py  types.py  unary.py  var.py
tests/: latex_examples.md  test_bix.py  test_calibration_pipeline.py  test_cate.py  test_containers.py  test_context.py  test_context_mypy.py  test_exceptions.py  test_func.py  test_func_containers.py  test_latex.py  test_latex_examples.py  test_mahonia.py  test_match.py  test_pretty.py  test_property_based.py  test_python_func.py  test_stats.py  test_stats_property_based.py
