# Copyright (c) 2025 JP Hutchins
# SPDX-License-Identifier: MIT

[project]
name = "bix"
version = "0.1.0"
description = "Bix is a domain specific language (DSL) for defining, evaluating, saving, and serializing (Bi)nary E(x)pressions."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "JP Hutchins", email = "jphutchins@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatch>=1.14.1",
    "mypy>=1.16.1",
    "pytest>=8.4.0",
    "pytest-mypy-testing>=0.1.3",
    "ruff>=0.12.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.hatch.envs.default.scripts]
format = "ruff format ."
lint = [
    "ruff check .",
    "mypy ."
]
test = "pytest"
all = [
    "format",
    "lint",
    "test"
]
