# Copyright (c) 2025 JP Hutchins
# SPDX-License-Identifier: MIT

[project]
name = "mahonia"
description = "Mahonia is a domain specific language (DSL) for defining, evaluating, saving, and serializing binary expressions."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "JP Hutchins", email = "jphutchins@gmail.com" }]
requires-python = ">=3.13"
dependencies = []
dynamic = ["version"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
"hatch>=1.14.1",
"hypothesis>=6.100.0",
"mypy>=1.19",
"pyright>=1.1.408",
"pytest>=8.4.0",
"pytest-mypy-testing>=0.1.3",
"ruff>=0.12.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
indent-style = "tab"

[tool.hatch.envs.default.scripts]
format = "ruff format ."
lint = ["ruff check .", "mypy ."]
test = "pytest --doctest-modules"
all = ["format", "lint", "test"]

[tool.hatch.version]
source = "vcs"

[tool.uv.workspace]
members = ["examples/manufacturing_tests"]

[tool.uv.sources]
mahonia = { workspace = true }
