[project]
name = "manufacturing"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "JP Hutchins", email = "jphutchins@gmail.com" }]
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "cyclopts>=4.3.0",
    "mahonia",
    "rich>=13.0.0",
]

[project.scripts]
manufacturing = "manufacturing:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
root = "../../"
